--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,19 @@
   <groupId>COMP4004A2</groupId>
   <artifactId>Cucumber</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
-    <dependency>
-        <groupId>io.cucumber</groupId>
-        <artifactId>cucumber-java</artifactId>
-        <version>2.3.1</version>
-        <scope>test</scope>
-    </dependency>
-	<dependency>
-		<groupId>info.cukes</groupId>
-		<artifactId>cucumber-junit</artifactId>
-		<version>1.2.4</version>
-		<scope>test</scope>
-	</dependency>
+  <dependencies><!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.141.59</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/junit/junit -->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+    <scope>test</scope>
+</dependency>
+
 </dependencies>
 </project>
